[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PieceSelector.gd" type="Script" id=1]
[ext_resource path="res://art/square gray light _png_128px.png" type="Texture2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 64, 64 )

[node name="PieceSelector" type="Node2D"]
process_mode = 2
position = Vector2( 256, 256 )
script = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2( 2, 0.5 )
texture = ExtResource( 2 )

[node name="QueenArea" type="Area2D" parent="."]
position = Vector2( -96, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="QueenArea"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RookArea" type="Area2D" parent="."]
position = Vector2( -32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RookArea"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BishopArea" type="Area2D" parent="."]
position = Vector2( 32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BishopArea"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="KnightArea" type="Area2D" parent="."]
position = Vector2( 96, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnightArea"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="input_event" from="QueenArea" to="." method="_on_QueenArea_input_event"]
[connection signal="input_event" from="RookArea" to="." method="_on_RookArea_input_event"]
[connection signal="input_event" from="BishopArea" to="." method="_on_BishopArea_input_event"]
[connection signal="input_event" from="KnightArea" to="." method="_on_KnightArea_input_event"]
